# Anti-fraud

./: .dockerignore  .env.example  .gitignore  ML_system_design_doc.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  release-images.yml  rollback.yml
airflow/: Dockerfile
configs/: config.yaml
deploy/k8s/base/: airflow-configmap.yaml  airflow-dags-configmap.yaml  airflow-db.yaml  airflow-logs-pvc.yaml  airflow-rbac.yaml  airflow-scheduler.yaml  airflow-secrets.yaml  airflow-webserver.yaml  antifraud-data-pvc.yaml  antifraud-db.yaml  batch-cronjob.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  minio-deployment.yaml  minio-pvc.yaml  minio-service.yaml  namespace.yaml  online-deployment.yaml  online-hpa.yaml  online-service.yaml  secret.yaml
deploy/k8s/overlays/production/: ingress-patch.yaml  kustomization.yaml
deploy/k8s/scripts/: k8s_deploy.sh
services/batch/: Dockerfile  main.py
services/online/: Dockerfile  main.py
src/antifraud/: config.py
src/antifraud/application/: batch_predict.py
src/antifraud/application/training/: evaluate_model.py  register_model.py  train_baseline.py  train_gradient_boosting_model.py  train_random_forest_model.py  utils.py
src/antifraud/domain/: __init__.py  models.py  predictor.py
src/antifraud/infrastructure/data_processing/: build_features.py  extract.py  make_splits.py  validate.py
src/antifraud/infrastructure/storage/: 01-create-airflow-db.sh  create_database.py  postgres.py  s3.py  s3_io.py  save_predictions.py
src/antifraud/interfaces/online/: main.py  routes.py  schemas.py
tests/unit/application/: test_batch_predict.py
tests/unit/application/training/: test_evaluate_model.py  test_register_model.py  test_utils.py
tests/unit/domain/: test_predictor.py
tests/unit/infrastructure/: test_config.py
tests/unit/infrastructure/data_processing/: test_extract.py  test_validate.py
tests/unit/infrastructure/storage/: test_postgres.py  test_s3.py  test_save_predictions.py
(+4 files in other folders)
