[project]
name = "antifraud-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "apache-airflow>=3.1.8",
    "apache-airflow-providers-docker>=4.5.3",
    "boto3>=1.42.70",
    "fastapi>=0.117.1",
    "joblib>=1.5.3",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "prometheus-client>=0.24.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.1.0",
    "mypy>=1.18.2",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["airflow"]
src_paths = ["src", "tests", "services", "airflow"]

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
ignore_missing_imports = true
warn_unused_ignores = true
pretty = true
show_error_codes = true
exclude = ["^airflow/"]

[tool.pylint.main]
source-roots = ["."]

[tool.pylint.imports]
known-third-party = ["airflow", "docker"]

[tool.pylint.design]
max-attributes = 35

[tool.pylint."messages control"]
disable = [
    "bad-inline-option",
    "broad-exception-caught",
    "deprecated-pragma",
    "duplicate-code",
    "file-ignored",
    "import-error",
    "invalid-name",
    "locally-disabled",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "raw-checker-failed",
    "suppressed-message",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    "use-symbolic-message-instead",
    "useless-suppression",
]
